k8s/hc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hc-app-service
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: ryzhkov-hc-app
