k8s/hc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hc-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/nryzhkov/(.*)
            backend:
              service:
                name: hc-app-service
                port:
                  number: 8000
            pathType: ImplementationSpecific
